<resources>
    <string name="app_name">Personal Spending</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_display">yyyy-mm-dd</string>
    <string name="empty_database">There is nothing to show yet. Try pressing the \"Add Spending\" button to begin!</string>
    <string name="monthly_spend">Monthly Spend</string>
    <string name="total_spend">Total Spend</string>
    <string-array name="types">
        <item>Food</item>
        <item>Transport</item>
        <item>Services</item>
        <item>Others</item>
        <item>Shop</item>
        <item>Supermarket</item>
    </string-array>
    <string name="save">Save</string>
    <string name="inserted_bill">Bill registered</string>
    <string name="excluded_bill">Bill excluded</string>
    <string name="remove_bill_confirmation">Are you sure you want to exclude this Bill?</string>
    <string name="exclude">Exclude</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="show_spendings">Show Spendings</string>
    <string name="addSpending">Add Spending</string>
    <string name="editSpending">Edit Spending</string>
    <string name="on">on</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="category">Category</string>
    <string name="saveSuccess">Saved sucessfully</string>
    <string name="saveError">Failed to save</string>
    <string name="excludeError">Failed to exclude</string>
    <string name="dateError">Invalid date format</string>
    <string name="fieldsError">Please, fill in all fields</string>
</resources>
